--- a/SubEthaEdit-Mac/English.lproj/MainMenu.xib
+++ b/SubEthaEdit-Mac/English.lproj/MainMenu.xib
@@ -80,7 +80,7 @@
                                     <action selector="newDocument:" target="-1" id="194"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="New Tab" tag="102" keyEquivalent="n" id="618">
+                            <menuItem title="New Tab" tag="102" alternate="YES" keyEquivalent="n" id="618">
                                 <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                 <connections>
                                     <action selector="newAlternateDocument:" target="-1" id="619"/>
@@ -91,7 +91,7 @@
                                     <action selector="openNormalDocument:" target="252" id="654"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Open in New Window…" keyEquivalent="o" id="651">
+                            <menuItem title="Open in New Window…" alternate="YES" keyEquivalent="o" id="651">
                                 <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                 <connections>
                                     <action selector="openAlternateDocument:" target="252" id="653"/>
