--- a/SubEthaEdit-Mac/SEEParticipantsOverlay.xib
+++ b/SubEthaEdit-Mac/SEEParticipantsOverlay.xib
@@ -7,6 +7,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SEEParticipantsOverlayViewController">
             <connections>
+                <outlet property="topLineView" destination="pfb-tW-yig" id="ae0-wY-gcw"/>
                 <outlet property="view" destination="1" id="2"/>
             </connections>
         </customObject>
@@ -15,8 +16,20 @@
         <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1" userLabel="Overlay View">
             <rect key="frame" x="0.0" y="0.0" width="480" height="96"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pfb-tW-yig" userLabel="Top Line View">
+                    <rect key="frame" x="0.0" y="95" width="480" height="1"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="Mmd-PY-bfs"/>
+                    </constraints>
+                </customView>
+            </subviews>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="pfb-tW-yig" secondAttribute="trailing" id="50V-dL-tN7"/>
+                <constraint firstItem="pfb-tW-yig" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="FwP-fb-iKA"/>
                 <constraint firstAttribute="height" constant="96" id="VPV-xs-D7N"/>
+                <constraint firstItem="pfb-tW-yig" firstAttribute="top" secondItem="1" secondAttribute="top" id="XTM-wk-o7F"/>
             </constraints>
             <animations>
                 <caTransition key="subviews">
